# SFC_FreeEnergyCorrection

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  usage.ipynb
example/: n20_c0.10_u0.50_edges.csv  n20_c0.10_u0.50_edges_sfc_node.txt  n20_c0.10_u0.50_edges_sfc_pair.txt  n20_c0.10_u0.50_edges_sfc_time.txt
sfc_output/: n20_c0.10_u0.50_edges_sfc_node.txt  n20_c0.10_u0.50_edges_sfc_pair.txt  n20_c0.10_u0.50_edges_sfc_time.txt
src/: data_loader.py  energy_calculator.py  error_estimator.py
src/SFC_FreeEnergyCorrection/: __init__.py  _version_helper.py  apply_sfc.py  data_loader.py  energy_calculator.py  error_estimator.py  sfc_cli.py
