[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfc-free-energy-correction"
dynamic = ["version"]
description = "State-Function Based Free Energy Correction (SFC) algorithm to improve the accuracy of relative binding free energy calculations."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["free energy perturbation", "alchemical free energy", "fep", "cycle closure correction", "sfc"]
authors = [{ name = "David Araripe", email = "david.araripe17@gmail.com" }]
maintainers = [{ name = "David Araripe", email = "david.araripe17@gmail.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
  "numpy",
  "scipy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "isort",
  "black",
]

[project.scripts]
sfc = "SFC_FreeEnergyCorrection.sfc_cli:main"

[project.urls]
homepage = "https://github.com/David-Araripe/State-Function-based-free-energy-correction-SFC-"
repository = "https://github.com/David-Araripe/State-Function-based-free-energy-correction-SFC-"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "SFC_FreeEnergyCorrection.__version__" }

[tool.setuptools_scm]
write_to = "src/SFC_FreeEnergyCorrection/_version.py"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py39']
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''

[tool.ruff]
line-length = 120
select = ["E", "F", "B", "W"]
ignore = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

target-version = "py39"
